--- a/src/components/Projects/SingleProject/SingleProject.css
+++ b/src/components/Projects/SingleProject/SingleProject.css
@@ -37,7 +37,7 @@
     transition: opacity 0.7s 0.3s;
 }
 
-.singleProject:hover img{
+.singleProject:hover .projectContent img{
     opacity: 0;
 }
 
@@ -62,22 +62,24 @@
 .singleProject .project--desc{
     position: absolute;
     width: 95%;
-    height: 160px;
+    height: fit-content;
     left: 0;
     top: 0;
-    transform: translate(-110%,40%);
+    transform: translate(-110%, 20px);
     padding: 15px;
     border-radius: 0 20px 20px 0;
     transition: transform 0.9s;
-    line-height: 110%;
+    line-height: 110%;  
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+    /* align-items: center; */
+    /* justify-content: center; */
     font-family: var(--primaryFont);
 }
   
 .singleProject:hover .project--desc{
-    transform: translate(-2%,40%);
+    transform: translate(-2%, 20px);
 }
   
 .singleProject .project--lang{
@@ -89,9 +91,9 @@
     display: flex;
     justify-content: center;
     gap: 0.5rem;
-    flex-direction: column;
+    flex-direction: row;
     border-radius: 10px 0 0 10px;
-    transform: translateX(100%);
+    transform: translateX(100%); 
     transition: transform 0.5s 0.3s;
     padding: 0.825rem;
 }
@@ -100,9 +102,9 @@
     transform: translateX(0);
 }
 
-.project--lang > span {
+.project--desc > span {
     font-family: var(--primaryFont);
     font-weight: 500;
     word-break: break-word; 
-    line-height: 100%;
+    line-height: 130%;
 }
